# jarvis-agente-terminal

./: .gitignore  CHANGELOG.md  LICENSE  MEMORIA.md  README.md  agente.py  claude.py  comandos.py  config.py  ferramentas.py  iniciar-qwen.sh  instalar.sh  local.py  permissao.py  pyproject.toml  run.sh  teste_aprovacao.py  teste_local.py  versao.py
.github/workflows/: tests.yml
src/hrx_code/: __init__.py  __main__.py  agente.py  aprovacao.py  caminhos.py  claude.py  comandos.py  config.py  ferramentas.py  gemini.py  gitignore.py  local.py  openai_compat.py  permissao.py  undo.py
tests/: test_agente.py  test_aprovacao.py  test_caminhos.py  test_cli.py  test_comandos.py  test_config_memoria.py  test_editar_arquivo.py  test_ferramentas.py  test_gemini.py  test_local.py  test_memoria.py  test_permissao.py  test_provedores.py  test_undo.py
windows/: INSTALAR.bat  agente.py  aprovacao.py  config.py  ferramentas.py  local.py
