[build-system]
requires = ["setuptools>=66"]
build-backend = "setuptools.build_meta"

[project]
name = "hrx-code"
dynamic = ["version"]
description = "Agente de IA para desenvolvimento e automação no terminal"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "Kauê"}]
dependencies = [
  "rich>=13,<16",
  "requests>=2.31,<3",
  "openpyxl>=3.1,<4",
  "reportlab>=4,<6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<10",
  "pytest-cov>=5,<8",
]

[project.scripts]
hrx = "hrx_code.agente:main"

[project.urls]
Homepage = "https://www.dwsolutions.company/hrx-code.html"
Repository = "https://github.com/kaue34381210-star/hrx-code"
Changelog = "https://github.com/kaue34381210-star/hrx-code/blob/main/CHANGELOG.md"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "hrx_code.versao.__version__"}
